# weather-api

./: .gitignore  .pylintrc  .tests.env  Makefile  README.md  bitbucket-pipelines.yml  config.test.yml  config.yml  gunicorn.conf.py  pyproject.toml  weatherclient.db
.github/workflows/: main.yml  python-app.yml
tests/: conftest.py
tests/functional/: conftest.py
tests/functional/healtcheck/: test_endpoints.py
tests/functional/weather-api/: test_add_request.py  test_weather_api.py
tests/functional/weather-api/clients/storage_clients/: test_csvstorageclient.py  test_dbstorageclient.py  test_storage_factory.py
tests/functional/weather-api/clients/storage_clients_folder/: test_DBStorageClient.py  test_storage_factory.py
tests/functional/weather-api/clients/weather_clients/: test_base_day_forecast.py  test_weather_factory.py
tests/functional/weather-api/clients/weather_clients_folder/: test_base_day_forecast.py  test_weather_factory.py
tests/functional/weather-api/weather_requests/: test_routes.py  test_service_handler.py
tests/unit/: test_context.py
weather_api/: app.py  config.py  config_schema.py  database.py  routes.py
weather_api/healthcheck/: __init__.py  routes.py  schemas.py
weather_api/weather_requests/: __init__.py  add_new_request_to_db.py  routes.py  schemas.py  service_handler.py  storage_handlers.py  weather_db_engine.py  weather_models.py  weather_requests_database.py  weatherclient.py
weather_api/weather_requests/clients/: __init__.py  base_day_forecast.py  clients.py  openweathermap_client.py  storage_clients.py  weather_clients.py  weatherapi_client.py
weather_api/weather_requests/clients/storage_clients/: storage_clients.py  storage_factory.py
weather_api/weather_requests/clients/storage_clients_folder/: storage_clients.py  storage_factory.py
weather_api/weather_requests/clients/weather_clients/: base_weather_client.py  openweathermap_client.py  weather_factory.py  weatherapi_client.py
weather_api/weather_requests/clients/weather_clients_folder/: base_day_forecast.py  openweathermap_client.py  weather_factory.py  weatherapi_client.py
weather_api/weather_requests/weather_clients/: clients.py  weatherapi_client.py  weatherclient.py
